--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
