--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "nextarter-chakra",
+  "short_name": "SwapEV",
   "name": "Next.js App Template",
   "lang": "en",
   "start_url": "/",
