--- a/package.json
+++ b/package.json
@@ -26,22 +26,27 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "faker": "^6.6.6",
     "framer-motion": "^6.5.1",
+    "google-map-react": "^2.2.0",
     "moment": "^2.29.4",
     "next": "12.2.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.4.0",
     "react-places-autocomplete": "^7.3.0",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/cz-commitlint": "^17.0.3",
     "@faker-js/faker": "^7.5.0",
+    "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.17",
     "@types/react-places-autocomplete": "^7.2.9",
+    "@types/recompose": "^0.30.10",
     "commitizen": "^4.2.5",
     "commitlint": "^17.0.3",
     "cross-env": "^7.0.3",
