--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.0",
     "@react-google-maps/api": "^2.12.2",
     "@react-navigation/bottom-tabs": "^6.3.3",
+    "axios": "^0.27.2",
     "faker": "^6.6.6",
     "framer-motion": "^6.5.1",
     "google-map-react": "^2.2.0",
