--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "import/no-extraneous-dependencies": "off",
     "no-console": "off",
     "no-nested-ternary": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "sonarjs/no-duplicate-string": "off"
   }
 }
