--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     "no-console": "off",
     "no-nested-ternary": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "sonarjs/no-duplicate-string": "off"
+    "sonarjs/no-duplicate-string": "off",
+    "sonarjs/no-ignored-return": "off",
+    "sonarjs/no-identical-functions": "off"
   }
 }
