--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "@typescript-eslint/no-unused-vars": "off",
     "sonarjs/no-duplicate-string": "off",
     "sonarjs/no-ignored-return": "off",
-    "sonarjs/no-identical-functions": "off"
+    "sonarjs/no-identical-functions": "off",
+    "react/jsx-curly-brace-presence": "off",
+    "no-promise-executor-return": "off"
   }
 }
